--- a/index.html
+++ b/index.html
@@ -17,14 +17,25 @@
       <section class="card" id="html-section">
         <h2>HTML</h2>
         <ul>
+          <li>Hypertext Markup Language (HTML) is used to create the structure of a webpage.</li>
+          <li>HTML elements work together to make a website structed and easy to navigate.</li>
           <li>The head element contains information about the webpage.</li>
           <li>The body element represents the visible content shown to the user.</li>
+          <li>Child elements are held inside parent elements.</li>
+          <li>The section element defines a section in a document that contains thematic content.</li>
+          <li>Semantic HTML elements indicate the roles of their content.</li>
         </ul>
       </section>
    
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
+          <li>Cascading Style Sheets (CSS) is used to style a webpage.</li>
+          <li>CSS defines the colors, aesthetics, vistual layout, and organization of a webpage.
+          <li>The three ways to style a webpage using CSS are incline CSS, internal CSS style sheet, and external CSS style sheet.</li>
+          <li>Inline CSS is used to style an element directly in an HTML file.</li>
+          <li>Internal style sheets contain CSS rules for a webpage in the head section of an HTML file.</li>
+          <li>External CSS style sheets allow developers to keep all their CSS rules in a separate file.</li>
           <li>A margin indicates how much space we want around the outside of an element.</li>
           <li>A padding indicates how much space we want around the content inside an element.</li>
         </ul>
@@ -35,14 +46,23 @@
         <ul>
           <li>git status: checks what branch we are currently on</li>
           <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+          <li>git commit -a</li>
+          <li>git add -A: stages our changes</li>
+          <li>git pull origin main: pulls in the base branch to our feature branch</li>
+          <li>git push origin: pushes up your changes to the remote respository
+          <li>git commmit -m "your message here": describes the changes you made</li>
         </ul>
       </section>
    
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
+          <li>Javascript (JS) is used to handle logic and allow users to interact with a website.</li>
+          <li>JS powers your websites with effects, interactivity, and data communication. </li>
           <li>A variable is a named container that allows us to store data in our code.</li>
           <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li>Conditional statements and loops can be used to control the order in which code is executed.</li>
+          <li>Array is a single variable that is used to hold a group of data.</li>
         </ul>
       </section>
     </main>
